<resources>
    <string name="app_name">Real Estate Manager</string>

    <string-array name="property_types">
        <item>HOUSE</item>
        <item>FLAT</item>
        <item>MANOR</item>
        <item>CASTLE</item>
        <item>LOFT</item>
    </string-array>

    <string-array name="poi_list">
        <item>DOCTOR</item>
        <item>PARK</item>
        <item>GROCERY STORE</item>
        <item>SCHOOL</item>
        <item>TRAIN STATION</item>
    </string-array>

    <!-- POI -->
    <string name="doctor">Doctor</string>
    <string name="park">Park</string>
    <string name="grocery">Grocery store</string>
    <string name="school">School</string>
    <string name="station">Train station</string>
    <string name="amount">AMOUNT</string>
    <string name="duration">DURATION</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pictures">Pictures</string>
    <string name="description">Description</string>
    <string name="area">Area</string>
    <string name="rooms">Rooms</string>
    <string name="location">Location</string>

    <string name="googleApiKey">AIzaSyA3oK6RYN9pGYaUi_gTzx4_dUOpAcuSqF0</string>
    <string name="title_activity_maps">Map</string>
    <string name="internet_connection_missing">Internet connection missing…</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="field_missing">Field missing.</string>
    <string name="saving">Saving…</string>
    <string name="edit">Edit</string>
    <string name="select_a_property">Please select a property to edit.</string>
    <string name="change_sale_status">Change sale status</string>
    <string name="text_in_description">Text in description</string>
    <string name="apply">APPLY</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="dollard_currency">$</string>
    <string name="euro_currency">€</string>
    <string name="years">years</string>
    <string name="dollars_per_month">$ /month</string>
    <string name="per_month">/month</string>
    <string name="interest_rate">INTEREST RATE</string>
    <string name="insurance_rate">INSURANCE RATE</string>
    <string name="total_bank_fees">Total bank fees: </string>
    <string name="change_currency">Change currency</string>
    <string name="no_estate_found">No estate found</string>
    <string name="property_infos">Property Infos</string>
    <string name="advanced_search">Advanced Search</string>


</resources>
