<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.loan.LoanActivity">

    <TextView
        android:id="@+id/tv_amount_title_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@id/seekbar_amount_loan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_amount_loan"
        style="@style/TextViewNumbersLoan"
        tools:text="100 000"
        app:layout_constraintEnd_toStartOf="@id/tv_amount_currency_loan"
        app:layout_constraintBottom_toBottomOf="@id/tv_amount_title_loan"/>

    <TextView
        android:id="@+id/tv_amount_currency_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:text="@string/dollar_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_amount_title_loan"
        />

    <SeekBar
        android:id="@+id/seekbar_amount_loan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:max="9"
        android:progress="10"
        app:layout_constraintBottom_toTopOf="@id/tv_duration_title_loan"
        app:layout_constraintTop_toBottomOf="@id/tv_amount_title_loan"/>

    <TextView
        android:id="@+id/tv_duration_title_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/seekbar_duration_loan"
        app:layout_constraintTop_toBottomOf="@id/seekbar_amount_loan"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_duration_loan"
        style="@style/TextViewNumbersLoan"
        tools:text="10"
        app:layout_constraintEnd_toStartOf="@id/tv_duration_unit_loan"
        app:layout_constraintBottom_toBottomOf="@id/tv_duration_title_loan"/>

    <TextView
        android:id="@+id/tv_duration_unit_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:text="@string/years"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_duration_title_loan"
        />

    <SeekBar
        android:id="@+id/seekbar_duration_loan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:max="19"
        android:progress="10"
        app:layout_constraintBottom_toTopOf="@id/tv_rate_title_loan"
        app:layout_constraintTop_toBottomOf="@id/tv_duration_title_loan"/>

    <!-- INTEREST RATE -->
    <TextView
        android:id="@+id/tv_rate_title_loan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        style="@style/TextViewTitle"
        android:text="@string/interest_rate"
        app:layout_constraintBottom_toTopOf="@id/tv_insurance_title_loan"
        app:layout_constraintTop_toBottomOf="@id/seekbar_duration_loan"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_rate_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingTop="@dimen/padding_big"
        tools:text="1.7"
        app:layout_constraintEnd_toStartOf="@id/tv_rate_unit_loan"
        app:layout_constraintTop_toTopOf="@id/tv_rate_title_loan"
        />

    <TextView
        android:id="@+id/tv_rate_unit_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:text="%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_rate_loan"
        tools:ignore="HardcodedText" />

    <!-- INSURANCE RATE -->
    <TextView
        android:id="@+id/tv_insurance_title_loan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        style="@style/TextViewTitle"
        android:text="@string/insurance_rate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_title_loan"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_insurance_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingTop="@dimen/padding_big"
        tools:text="3.4"
        app:layout_constraintEnd_toStartOf="@id/tv_insurance_unit_loan"
        app:layout_constraintTop_toTopOf="@id/tv_insurance_title_loan"
        />

    <TextView
        android:id="@+id/tv_insurance_unit_loan"
        style="@style/TextViewNumbersLoan"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:text="%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_insurance_loan"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>